# modern-python.cookiecutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json  copier.yml  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
hooks/: post_gen_project.py
template/{{ project_slug }}/: setup.cfg.jinja  tox.ini
template/{{ project_slug }}/src/{{ module_slug }}/: __init__.py.jinja
template/{{ project_slug }}/tests/unit/: test_init.py.jinja
tests/: __init__.py
{{cookiecutter.package_slug}}/: setup.cfg
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: __init__.py
{{cookiecutter.project_slug}}/tests/package/: __init__.py  test_install.py
{{cookiecutter.project_slug}}/tests/unit/: __init__.py  test_init.py
