[metadata]
name = {{ cookiecutter.project_slug }}

[options]
package_dir =
    = src
packages = find:
install_requires =
    # The module `import.metadata` was added in Python 3.8. For earlier
    # version, the package `importlib_metadata` can be used.
    # Version of 1.4 `importlib_metadata` is the version that was added to
    # Python 3.8.
    importlib_metadata >= 1.4; python_version < '3.8'

[options.packages.find]
where = src
